# purifibre

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_Linux.sh  build_Windows.bat
src/: main.cpp
src/base/: byteSwapper.h  config.cpp  config.h  dataTypeHandler.cpp  dataTypeHandler.h  multithreader.cpp  multithreader.h  stringOperations.cpp  stringOperations.h  vectorOperations.cpp  vectorOperations.h
src/image/: image.cpp  image.h  image_aux.cpp  image_headerReader.cpp  image_reader.cpp  image_writer.cpp  interpolation.h  sf_image.cpp  sf_image.h
src/image/niftilib/nifti2/: nifti2_io.c  nifti2_io.h
src/image/niftilib/znzlib/: znzlib.c
src/math/: core.h  randomThings.cpp  randomThings.h  rayTrace_box.cpp  rotation.h  sphere.h  sphericalFunctions.cpp  sphericalFunctions.h
src/tractogram/: gridder_4segmentLength.h  parallelStreamlineGenerator.cpp  parallelStreamlineGenerator.h  tractogram2imageMapper.cpp  tractogram2imageMapper.h  tractogramReader.cpp  tractogramReader.h  tractogramWriter.cpp  tractogramWriter.h  tractogram_operators.cpp  tractogram_operators.h
